Changelog
=========

1.9.1 (unreleased)
------------------

- deactivated stylesfile, they are now handled in subsite.css in /sub/esener (conflicting statements removed) (pilz)
- added question number in question overview, order question according to that
  number (gerken)


1.9.0 (2009-10-21)
------------------

- Changed JS, questions pop up differently now (gerken)
- Nice styling (pecek)

1.8.1 (2009-10-07)
------------------

- Fixed country mapping error (gerken)
- Removed two more questions from import (gerken)
- Countries that do not participate don't have two letter codes and are white
  now (gerken)
- Ensuring now that on charts the yAxis never goes above 100% (gerken)


1.8.0 (2009-10-02)
------------------

- New translation for question groups (gerken)
- Fixed an issue with the right layer of our skin (gerken)
- Changed algorithm for calculating percentage with grouped results (gerken)
- Added caching (gerken)
- Added prime script to prime the cache (gerken)

1.7.0 (2009-09-28)
------------------

- New import scripts for final data (gerken)

1.6.0 (2009-09-22)
------------------

- Added support for questions with too few answers (gerken)

1.5.2 (2009-09-21)
------------------

- We now ignore answers where no answer was given
  These questions were actually never asked (gerken)
- Now with the real meanings of categories (sec3, size_5) (gerken)
- Complete country mapping no answers. Norway and Switzerland added (gerken)
- Added support for % questions (gerken)

1.4.0 (2009-09-15)
------------------

- Added missing translation (gerken)
- Added fallback if no map default answer has no translation (gerken)
- Fixed multiple query string issues (gerken)
- Fixed a wrong calculation if noone from a given country answered (gerken)
- Updated all DB Scripts for usage with postgres. No compatibility with sqlite retained. Therefor a bigger release (gerken)

1.3.2 (2009-09-14)
------------------

- Make it work with postgres (gerken)

1.3.1 (2009-09-10)