@@ -7,6 +7,7 @@ Changelog
 - deactivated stylesfile, they are now handled in subsite.css in /sub/esener (conflicting statements removed) (pilz)
 - added question number in question overview, order question according to that
   number (gerken)
+- totally changed excel for question views (gerken)
 
 
 1.9.0 (2009-10-21)
